elif sayfasında oynandı.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="elif.html">
+    <link rel="stylesheet" href="meryem.html">
+    <link rel="stylesheet" href="sevde.html">
     <title>YEMEK TARİFLERİMİZ</title>
 </head>
   <body >
