--- a/elif.html
+++ b/elif.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="row row-cols-2 row-cols-md-2 g-2" style="width: 400px;">
+    <div class="row row-cols-2 row-cols-md-2 g-2  mx-auto my-auto d-flex justify-content-center margin-top:200px" style="width: 400px; ">
         <div class="col">
           <div class="card" >
             <img src="images/iskender.png" class="card-img-top" alt="...">
