--- a/index.html
+++ b/index.html
@@ -32,21 +32,22 @@
 
     <div class="content2">
         <div class="img img1">
-            <h5>Indian Food</h5>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <h5>İskender</h5>
+            <p>Bursanın ünlü yemeği iskender tarifi...</p>
+            <br> <br>
+            <a href="iskender.html">TARİFİ GÖR.</a>
         </div>
         <div class="img img2">
             <h5>Burger</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <br> <br>
         </div>
         <div class="img img3">
             <h5>Pizza</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <br> <br>
         </div>
-        <div class="img img4">
-            <h5>Desi Bhoj</h5>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-        </div>
+   
     </div>
 </body>
 </html>
