--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 </head>
 <body>
     <div class="container">
-        <h1>FOOD PLAZA</h1>
+        <h1>ENM TARİFLERİ</h1>
         <div class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Feature</a></li>
-                <li><a href="#">Chef</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Booking</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+               <li><a href="chef.html">Chef</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
     <div class="content">
-        <h1>BEST <span>QUALITY</span><br> INGREDIENTS</h1>
-        <a class="menu-color" href="#">View Menu</a>
-        <a href="#">Book Table</a>
+        <h1>EN <span>KALİTELİ</span><br> TARİFLER</h1>
+        <a class="menu-color" href="menu.html">View Menu</a>
+        <a href="chef.html">Chefs</a>
     </div>
 
     <div class="spinner"></div>
