--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h5>İskender</h5>
             <p>Bursanın ünlü yemeği iskender tarifi...</p>
             <br> <br>
-            <a href="iskender.html">TARİFİ GÖR.</a>
+                
         </div>
         <div class="img img2">
             <h5>Burger</h5>
@@ -43,6 +43,7 @@
         <div class="img img3">
             <h5>Pizza</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <a href="sevde.html">TARİFİ GÖR.</a>
             <br> <br>
         </div>
    
