--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <style>
       body{
-    background: rgba(0,0,0,0.6) url('food.jpg') center center fixed;
+    background: rgba(0,0,0,0.6) url('şef.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
    
@@ -31,6 +31,23 @@
 .container {
   padding: 20px 5px;
 
+}
+.navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 0 20px;
+}
+
+.navbar ul li a{
+    padding: 9px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    transition: 1s;
+}
+
+.navbar ul li a:hover{
+    background-color: rgb(36,131,4);
 }
 </style>
 <body>
