--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,24 @@
   padding: 20px 5px;
 
 }
+
+.navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 0 20px;
+}
+
+.navbar ul li a{
+    padding: 9px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    transition: 1s;
+}
+
+.navbar ul li a:hover{
+    background-color: rgb(36,131,4);
+}
 </style>
 <body>
    
