sarma tarifi oluşturuldu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="img img1">
             <h5>İskender</h5>
             <p>Bursanın ünlü yemeği iskender tarifi...</p>
+            <a href="iskender.html">TARİFİ GÖR.</a>
             <br> <br>
                 
         </div>
@@ -41,8 +42,8 @@
             <br> <br>
         </div>
         <div class="img img3">
-            <h5>Pizza</h5>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <h5>Yaprak Sarma</h5>
+            <p>Zeytin yağlı yaprak sarma tarifi...</p>
             <a href="sevde.html">TARİFİ GÖR.</a>
             <br> <br>
         </div>
