--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 
 <style>
       body{
-    background: rgba(0,0,0,0.6) url('food.jpg') center center fixed;
+    background: rgb(255, 255, 255) url('food.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
    
@@ -55,6 +55,21 @@ a {
 }
 </style>
 <body>
+  <div>
+    <div class="container">
+      <h1>ENM TARİFLERİ</h1>
+      <div class="navbar">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+             <li><a href="chef.html">Chef</a></li>
+              <li><a href="menu.html">Menu</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <br>
+      </div>
+  </div>
+     
    
   
     <div class="card">
