--- a/iskender.html
+++ b/iskender.html
@@ -34,6 +34,21 @@
 
 </style>
 <body>
+    <div>
+        <div class="container">
+          <h1>ENM TARİFLERİ</h1>
+          <div class="navbar">
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                 <li><a href="chef.html">Chef</a></li>
+                  <li><a href="menu.html">Menu</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+              <br>
+          </div>
+      </div>
+         
     <div class="container">
         <div class="row">
             <div class="col-md-9" style=" color:white">
