--- a/sevde.html
+++ b/sevde.html
@@ -14,9 +14,42 @@
     background-blend-mode: darken;
    
 }
+.navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 0 20px;
+}
+
+.navbar ul li a{
+    padding: 9px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    transition: 1s;
+}
+
+.navbar ul li a:hover{
+    background-color: rgb(36,131,4);
+}
 
 </style>
 <body>
+
+    <div>
+        <div class="container">
+          <h1>ENM TARİFLERİ</h1>
+          <div class="navbar">
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                 <li><a href="chef.html">Chef</a></li>
+                  <li><a href="menu.html">Menu</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+              <br>
+          </div>
+      </div>
+         
     <div class="container">
         <div class="row">
             <div class="col-md-9" style=" color:white">
