--- a/iskender.html
+++ b/iskender.html
@@ -5,34 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İskender</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
-    body{
-    background: rgba(0,0,0,0.6) url('iskenbderetbol.jpg') center center fixed;
+body{
+    background: rgb(254, 254, 254) url('food.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
-   
 }
-
-.navbar ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 0 20px;
-}
-
-.navbar ul li a{
-    padding: 9px;
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 1s;
-}
-
-.navbar ul li a:hover{
-    background-color: rgb(36,131,4);
-}
-
 </style>
+
 <body>
     <div>
         <div class="container">
@@ -49,7 +31,7 @@
           </div>
       </div>
          
-    <div class="container">
+    <div class="containerr">
         <div class="row">
             <div class="col-md-9" style=" color:white">
                 <h1>Bursa Kebabı</h1>
@@ -60,7 +42,11 @@
                 <div class="row mt-4">
                     <div class="col-md-12 recipe-summary">
                             <div class="text-gray-content" style=" color:white; font-weight:500">
-                                <p>İskender kebabıyla ünlenen Bursa'nın, kuzu etiyle hazırlanan farklı bir kebabı daha vardır. Külbastı, sos ve pide ile hazırlanan Bursa kebabı, Türk mutfağında önemli bir yere sahiptir. Peki, evde Bursa kebabı nasıl yapılır? Mutfağa geçip malzemeleri hazır ettiyseniz, kolları sıvayalım ve Bursa kebabı yapımına başlayalım.</p>
+                                <p>İskender kebabıyla ünlenen Bursa'nın, kuzu etiyle hazırlanan farklı bir kebabı daha vardır.
+                                    <br>
+                                     Külbastı, sos ve pide ile hazırlanan Bursa kebabı, Türk mutfağında önemli bir yere sahiptir.
+                                     <br>
+                                      Peki, evde Bursa kebabı nasıl yapılır? Mutfağa geçip malzemeleri hazır ettiyseniz, kolları sıvayalım ve Bursa kebabı yapımına başlayalım.</p>
                             </div>
                     </div>
                 </div>
