--- a/menu.html
+++ b/menu.html
@@ -6,54 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<style>
-      body{
-    background: rgb(255, 255, 255) url('food.jpg') center center fixed;
-    background-size: cover;
-    background-blend-mode: darken;
-   
-      }
-      .card {
-
-  box-shadow: 0 4px 8px 0 rgba(255,255,255, 0.3);;
-  transition: 0.3s;
-  margin-top: 100px;
-}
-
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
-}
-
-.container {
-  padding: 20px 5px;
-
-}
-a {
-    color: white;
-  }
-
-  .navbar ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 0 20px;
-}
-
-.navbar ul li a{
-    padding: 9px;
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 1s;
-}
-
-.navbar ul li a:hover{
-    background-color: rgb(36,131,4);
-}
-</style>
 <body>
   <div>
     <div class="container">
@@ -74,12 +28,16 @@ a {
   
     <div class="card">
         
-        <div class="container" style="color: white; text-align: center;">
+        <div class="containerr" style="color: white; text-align: center;">
             <h1>MENÜLER </h1>
+            <br>
 
                 <li><a href="iskender.html">iSKENDER</a></li>
+                <br>
                 <li><a href="sevde.html">ZEYTİN YAĞLI YAPRAK SARMA</a></li>
+                <br>
                 <li><a href="oruk.html">ORUK  (HATAY USULÜ İÇLİ KÖFTE)</a></li>
+                <br>
                 <li><a href="kaytazboregi.html">KAYTAZ BÖREĞİ</a></li>
 
           
