--- a/about.html
+++ b/about.html
@@ -6,50 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<style>
-      body{
-    background: rgba(0,0,0,0.6) url('şef.jpg') center center fixed;
-    background-size: cover;
-    background-blend-mode: darken;
-   
-      }
-      .card {
 
-  box-shadow: 0 4px 8px 0 rgba(255,255,255, 0.3);;
-  transition: 0.3s;
-  margin-top: 100px;
-}
-
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
-}
-
-.container {
-  padding: 20px 5px;
-
-}
-.navbar ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 0 20px;
-}
-
-.navbar ul li a{
-    padding: 9px;
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 1s;
-}
-
-.navbar ul li a:hover{
-    background-color: rgb(36,131,4);
-}
-</style>
 <body>
   <div>
     <div class="container">
@@ -69,8 +29,9 @@
   
     <div class="card">
         
-        <div class="container" style="color: white; text-align: center;">
+        <div class="containerrrr" style="color: white; text-align: center;">
             <h1> BİZ KİMİZ ?  </h1>
+            <br><br>
             <p>Biz 3 arkadaş yemek yapma ve yeme konusunda çok iyiyiz! Tariflerimizi sizlere sunmaktan  mutluluk duyuyoruz...</p>
           
         </div>
