--- a/sevde.html
+++ b/sevde.html
@@ -6,32 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yaprak Sarma</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <style>
-    body{
-    background: rgba(0,0,0,0.6) url('sarma.webp') center center fixed;
+body{
+    background: rgb(254, 254, 254) url('sarma.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
-   
 }
-.navbar ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 0 20px;
-}
-
-.navbar ul li a{
-    padding: 9px;
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 1s;
-}
-
-.navbar ul li a:hover{
-    background-color: rgb(36,131,4);
-}
-
 </style>
 <body>
 
@@ -50,7 +32,7 @@
           </div>
       </div>
          
-    <div class="container">
+    <div class="containerr">
         <div class="row">
             <div class="col-md-9" style=" color:white">
                 <h1>Zeytin Yağlı Yaprak Sarma</h1>
