--- a/sevde.html
+++ b/sevde.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 body{
-    background: rgb(254, 254, 254) url('sarma.jpg') center center fixed;
+    background: rgb(254, 254, 254) url('sarma.webp') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
 }
