--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <BR> <BR></BR></BR>
               <p>MERYEM HATAY ----> mhatay20@posta.pau.edu.tr</p>
               <p>NAKİYE SEVDE GÜRSULAR ----> ngursular20@posta.pau.edu.tr</p>
-              <p>ELİF GİDER ----> ngursular20@posta.pau.edu.tr</p>
+              <p>ELİF GİDER ----> egider20@posta.pau.edu.tr</p>
           </div>
       
    </div>
