--- a/iskender.html
+++ b/iskender.html
@@ -9,7 +9,7 @@
 </head>
 <style>
 body{
-    background: rgb(254, 254, 254) url('food.jpg') center center fixed;
+    background: rgb(254, 254, 254) url('iskender.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
 }
